--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/footer.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -15,7 +18,7 @@
                     <!-- span brer nv pel jg display inline -->
             </h4>
 
-            <div>
+            <div class="nav-link">
                 <a href="index.html">Home</a>
                 <a href="pages/about.html">About</a>
                 <a href="pages/category.html">Category</a>
@@ -33,7 +36,7 @@
         <div class="main">
             <div class="main-text">
                 <h4>BOOK HEAVEN</h4>
-                <h1>Welcome to your world of endless stories.</h1>
+                <h1>Welcome to the world of endless stories.</h1>
                 <p>a digital home for stories that inspire, entertain, and spark imagination.
                     From timeless classics to modern tales, explore a world of adventures, mysteries,
                     and dreams all just a click away. Start your journey today and let every story take you somewhere
@@ -42,11 +45,338 @@
                     <button class="btn-primary">Read Now</button>
                 </div>
             </div>
-            <div class="main-image">
-                <img src="image/png2.png" alt="">
+            <div class="hero-image">
+                <img src="image/home book.png" alt="">
             </div>
         </div>
     </main>
 
+
+
+    <!-- Trending - Khmer -->
+    <article>
+        <div class="trending-kh">
+            <div class="header-book">
+                <h1 class="title">Khmer Trending Books</h1>
+                <button class="arrow-btn">See more</button>
+            </div>
+            <div class="books-grid">
+                <!-- Book 1: By the Horns -->
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh1.png" alt="">
+                    </div>
+                    <h3 class="author">ជួបគ្នា១៥ឆ្នាំក្រោយ</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh2.png" alt="">
+                    </div>
+                    <h3 class="author">រលកបោកខ្យល់</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh3.png" alt="">
+                    </div>
+                    <h3 class="author">សែងសុសិយា</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh4.png" alt="">
+                    </div>
+                    <h3 class="author">ប្រលោមចិត្ត​ ភាគ២</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh5.png" alt="">
+                    </div>
+                    <h3 class="author">ប្រលោមចិត្ត​ ភាគ១</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <!-- <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh6.png" alt="">
+                    </div>
+                    <h3 class="author">ស្នេហ៍ក្នុងអណ្តាតភ្លើង</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Read Now</button>
+                </div> -->
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh7.png" alt="">
+                    </div>
+                    <h3 class="author">អតិតកាលដែលខ្ញុំគ្មាន</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh8.png" alt="">
+                    </div>
+                    <h3 class="author">ផ្ការីកនាយសមុទ្រ</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">vBuy Now</button>
+                </div>
+
+            </div>
+        </div>
+    </article>
+
+    <!-- Trending - Khmer -->
+    <article>
+        <div class="trending-kh">
+            <div class="header-book">
+                <h1 class="title">English Trending Books</h1>
+                <button class="arrow-btn">See more</button>
+            </div>
+            <div class="books-grid">
+                <!-- Book 1: By the Horns -->
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng1.png" alt="">
+                    </div>
+                    <h3 class="author">ជួបគ្នា១៥ឆ្នាំក្រោយ</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng2.png" alt="">
+                    </div>
+                    <h3 class="author">រលកបោកខ្យល់</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng3.png" alt="">
+                    </div>
+                    <h3 class="author">សែងសុសិយា</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng4.png" alt="">
+                    </div>
+                    <h3 class="author">ប្រលោមចិត្ត​ ភាគ២</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng5.png" alt="">
+                    </div>
+                    <h3 class="author">ប្រលោមចិត្ត​ ភាគ១</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <!-- <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-kh6.png" alt="">
+                    </div>
+                    <h3 class="author">ស្នេហ៍ក្នុងអណ្តាតភ្លើង</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Read Now</button>
+                </div> -->
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng6.png" alt="">
+                    </div>
+                    <h3 class="author">អតិតកាលដែលខ្ញុំគ្មាន</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+                <div class="book-card">
+                    <div class="book-image">
+                        <img src="image/b-eng7.png" alt="">
+                    </div>
+                    <h3 class="author">ផ្ការីកនាយសមុទ្រ</h3>
+                    <p class="title-book">By Manith Jupiter</p>
+                    <div class="price-book">
+                        <span class="price">$20.00</span>
+                        <button class="cart-btn">🛒</button>
+                    </div>
+                    <button class="more-btn">Buy Now</button>
+                </div>
+
+            </div>
+        </div>
+    </article>
+
+    <!-- section -->
+    <section>
+        <div class="library-section">
+            <div class="top-section">
+                <h2>Our Library Survey</h2>
+                <p>With thousands of digital and printable resources, find the best resource for you.</p>
+
+            </div>
+            <div class="cards">
+                <!-- Card 1 -->
+                <div class="card-section">
+                    <h3>Lesson Plans</h3>
+                    <p>A bookshop website is designed to make finding and buying books easy and enjoyable. 
+                        It usually has categories like novels, history, education, and fun stories.
+                         By visiting a bookshop online, 
+                        readers can discover new authors, explore different genres, and enjoy the convenience of purchasing books from anywhere.</p>
+                    <button>Plan my lesson today</button>
+                </div>
+                <!-- Card 2 -->
+                <div class="card-section">
+                    <h3>Worksheets</h3>
+                    <p>Welcome to our bookshop, your destination for stories, novels, 
+                        history, and fun reads for all ages. We offer a wide selection of books to inspire learning,
+                         and provide hours of enjoyment. Whether you are searching for educational resources, 
+                        thrilling stories, or timeless classics, our bookshop brings the joy of reading right to your fingertips.</p>
+                    <button>Check it out</button>
+                </div>
+                <!-- Card 3 -->
+                <div class="card-section">
+                    <h3>Activities</h3>
+                    <p>A bookshop website is designed to make finding and buying books easy and enjoyable. 
+                        It usually has categories like novels, history, education, and fun stories.
+                         By visiting a bookshop online,
+                         readers can discover new authors, explore different genres, and enjoy the convenience of purchasing books from anywhere.</p>
+                    <button>Make something now</button>
+                </div>
+            </div>
+    </section>
+
+
+
+    
+    
+
+    <!-- Footer Section -->
+<footer class="footer">
+  <div class="footer-container">
+    <!-- Logo & About -->
+    <div class="footer-about">
+      <h2>BOOK HEAVEN</h2>
+      <p>Your digital home for timeless classics, modern tales, and endless imagination.</p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Category</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Categories -->
+    <div class="footer-categories">
+      <h3>Categories</h3>
+      <ul>
+        <li><a href="#">Novels</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Education</a></li>
+        <li><a href="#">Comics</a></li>
+        <li><a href="#">Funny Stories</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-contact">
+      <h3>Contact Us</h3>
+      <p>Email: support@bookheaven.com</p>
+      <p>Phone: +123 456 789</p>
+      <p>Location: Phnom Penh, Cambodia</p>
+    </div>
+  </div>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>© 2025 Book Heaven. All rights reserved.</p>
+  </div>
+</footer>
 </body>
+
 </html>
