--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <h4>
-                <img src="image/logo.png" alt="">
+                <img src="image/logo2.png" alt="">
                 <span>BOOK HEAVEN</span4>
                     <!-- span brer nv pel jg display inline -->
             </h4>
