--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <!-- Book 1: By the Horns -->
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh1.png" alt="">
+                        <img src="image/b-kh/b-kh1.png" alt="">
                     </div>
                     <h3 class="author">ជួបគ្នា១៥ឆ្នាំក្រោយ</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -77,7 +77,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh2.png" alt="">
+                        <img src="image/b-kh/b-kh2.png" alt="">
                     </div>
                     <h3 class="author">រលកបោកខ្យល់</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -90,7 +90,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh3.png" alt="">
+                        <img src="image/b-kh/b-kh3.png" alt="">
                     </div>
                     <h3 class="author">សែងសុសិយា</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -103,7 +103,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh4.png" alt="">
+                        <img src="image/b-kh/b-kh4.png" alt="">
                     </div>
                     <h3 class="author">ប្រលោមចិត្ត​ ភាគ២</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -116,7 +116,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh5.png" alt="">
+                        <img src="image/b-kh/b-kh5.png" alt="">
                     </div>
                     <h3 class="author">ប្រលោមចិត្ត​ ភាគ១</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -142,7 +142,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh7.png" alt="">
+                        <img src="image/b-kh/b-kh7.png" alt="">
                     </div>
                     <h3 class="author">អតិតកាលដែលខ្ញុំគ្មាន</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -155,7 +155,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-kh8.png" alt="">
+                        <img src="image/b-kh/b-kh8.png" alt="">
                     </div>
                     <h3 class="author">ផ្ការីកនាយសមុទ្រ</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -181,7 +181,7 @@
                 <!-- Book 1: By the Horns -->
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng1.png" alt="">
+                        <img src="image/b-eng/b-eng1.png" alt="">
                     </div>
                     <h3 class="author">ជួបគ្នា១៥ឆ្នាំក្រោយ</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -194,7 +194,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng2.png" alt="">
+                        <img src="image/b-eng/b-eng2.png" alt="">
                     </div>
                     <h3 class="author">រលកបោកខ្យល់</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -207,7 +207,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng3.png" alt="">
+                        <img src="image/b-eng/b-eng3.png" alt="">
                     </div>
                     <h3 class="author">សែងសុសិយា</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -220,7 +220,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng4.png" alt="">
+                        <img src="image/b-eng/b-eng4.png" alt="">
                     </div>
                     <h3 class="author">ប្រលោមចិត្ត​ ភាគ២</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -233,7 +233,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng5.png" alt="">
+                        <img src="image/b-eng/b-eng5.png" alt="">
                     </div>
                     <h3 class="author">ប្រលោមចិត្ត​ ភាគ១</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -259,7 +259,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng6.png" alt="">
+                        <img src="image/b-eng/b-eng6.png" alt="">
                     </div>
                     <h3 class="author">អតិតកាលដែលខ្ញុំគ្មាន</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -272,7 +272,7 @@
 
                 <div class="book-card">
                     <div class="book-image">
-                        <img src="image/b-eng7.png" alt="">
+                        <img src="image/b-eng/b-eng7.png" alt="">
                     </div>
                     <h3 class="author">ផ្ការីកនាយសមុទ្រ</h3>
                     <p class="title-book">By Manith Jupiter</p>
@@ -286,6 +286,8 @@
             </div>
         </div>
     </article>
+
+    
 
     <!-- section -->
     <section>
@@ -334,6 +336,7 @@
     <!-- Footer Section -->
 <footer class="footer">
   <div class="footer-container">
+    
     <!-- Logo & About -->
     <div class="footer-about">
       <h2>BOOK HEAVEN</h2>
@@ -367,7 +370,7 @@
     <div class="footer-contact">
       <h3>Contact Us</h3>
       <p>Email: support@bookheaven.com</p>
-      <p>Phone: +123 456 789</p>
+      <p>Phone: 097 456 789</p>
       <p>Location: Phnom Penh, Cambodia</p>
     </div>
   </div>
