--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Category</title>
+    <title>About</title>
     <link rel="stylesheet" href="../style/about.css">
     <link rel="stylesheet" href="../style/footer.css">
 </head>
@@ -47,7 +47,7 @@
             </div>
 
             <aside class="hero-card" aria-label="Quick facts">
-                <img src="https://via.placeholder.com/360x200.png?text=Book+Shop+Photo" alt="Bookstore interior">
+                <img src="../image/bookshop.png" alt="Bookstore interior">
                 <p><strong>Established:</strong> 2022</p>
                 <p style="margin-top:8px;color:var(--muted)">Located in Phnom Penh — shipping nationwide</p>
             </aside>
@@ -139,7 +139,7 @@
         </section>
 
         <!-- Team -->
-        <section aria-labelledby="team" style="margin-bottom:18px">
+        <!-- <section aria-labelledby="team" style="margin-bottom:18px">
             <h3 id="team" style="color:var(--brand-dark)">Meet the Team</h3>
             <p style="color:var(--muted);margin-top:6px">Friendly faces who run Book Heaven — from curation to
                 logistics.</p>
@@ -173,7 +173,7 @@
                     <p>Customer Support</p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Short testimonials scroller -->
         <section aria-labelledby="readers" style="margin-bottom:18px">
@@ -333,7 +333,7 @@
             <div class="footer-contact">
                 <h3>Contact Us</h3>
                 <p>Email: support@bookheaven.com</p>
-                <p>Phone: +123 456 789</p>
+                <p>Phone: 097 456 789</p>
                 <p>Location: Phnom Penh, Cambodia</p>
             </div>
         </div>
