add responsive on footer

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
     <main>
         <div class="main">
             <div class="main-text">
+                <form class="search-box">
+                    <input type="text" placeholder="Search..." />
+                    <button type="submit">Search</button>
+                </form>
                 <h4>“Heaven for Every Book Lover.”</h4>
-                <h1>Book Heaven – Where Every Page Opens a New World and Every Story Touches Your Heart.</h1>
+                <h1>Book Heaven Is Where Every Page Opens a New World and Every Story Touches Your Heart.</h1>
                 <div class="buttons">
                     <button class="btn-primary">Read Now</button>
                 </div>
@@ -59,52 +63,62 @@
                 <div class="book-card"><img src="image/b-kh/b-kh1.png" alt="Book Cover">
                     <h3>Whispers of Dawn</h3>
                     <p>By Anna Wells</p>
-                    <p class="price">$9.99</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh2.png" alt="Book Cover">
                     <h3>The Hidden Key</h3>
                     <p>By Mark Thompson</p>
-                    <p class="price">$12.50</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh3.png" alt="Book Cover">
                     <h3>Silent Storm</h3>
                     <p>By Leila Chan</p>
-                    <p class="price">$8.75</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh4.png" alt="Book Cover">
                     <h3>Journey Beyond</h3>
                     <p>By David Kim</p>
-                    <p class="price">$11.20</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh5.png" alt="Book Cover">
                     <h3>Echoes of Time</h3>
                     <p>By Maria Lopez</p>
-                    <p class="price">$10.00</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh6.png" alt="Book Cover">
                     <h3>Crimson Skies</h3>
                     <p>By Omar Ali</p>
-                    <p class="price">$7.99</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh7.png" alt="Book Cover">
                     <h3>Frozen Paths</h3>
                     <p>By Sophia Carter</p>
-                    <p class="price">$9.50</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh8.png" alt="Book Cover">
                     <h3>Shadowed Truth</h3>
                     <p>By Kevin Brown</p>
-                    <p class="price">$8.30</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh9.png" alt="Book Cover">
                     <h3>Whispers of Dawn</h3>
                     <p>By Anna Wells</p>
-                    <p class="price">$9.99</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
                 <div class="book-card"><img src="image/b-kh/b-kh10.png" alt="Book Cover">
                     <h3>Whispers of Dawn</h3>
                     <p>By Anna Wells</p>
-                    <p class="price">$9.99</p><button class="buy-btn">Buy Now</button>
+                    <p class="price"><span class="original">$8.75</span> <span class="sale">$7.88</span></p>
+                    <button class="buy-btn">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -189,10 +203,10 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/about.html">About</a></li>
+                    <li><a href="pages/category.html">Category</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -200,9 +214,10 @@
             <div class="footer-categories">
                 <h3>Categories</h3>
                 <ul>
-                    <li><a href="#">Novels</a></li>
-                    <li><a href="#">Education</a></li>
-                    <li><a href="#">Comics</a></li>
+                    <li><a href="pages/category.html">Novels</a></li>
+                    <li><a href="pages/social.html">Social</a></li>
+                    <li><a href="pages/comics.html">Comics</a></li>
+                    <li><a href="pages/learning.html">Education</a></li>
                 </ul>
             </div>
 
