--- a/pages/about.html
+++ b/pages/about.html
@@ -108,18 +108,19 @@
     <section class="feedbacks">
         <h2>Reader Feedback</h2>
         <div class="feedback-grid">
+            <div class="feedback">“FI love Book Heaven! They have a great selection of books and the staff
+                always give helpful recommendations. Delivery is fast and reliable”<br><span>Chandy</span></div>
+            <div class="feedback">“Great experience! The website is easy to use, checkout is smooth,
+                and my books arrived quickly and in perfect condition.”<br><span>Seyla</span></div>
+            <div class="feedback">“Book Heaven is my favorite place for books. Friendly staff,
+                easy online ordering, and everything I need is available..”<br><span>Sreymom</span></div>
             <div class="feedback">“Fast delivery and loved the Khmer collections — highly
-                recommended!”<br><span>Visa</span></div>
+                recommended!”<br><span>Sievmey</span></div>
             <div class="feedback">“Great prices and helpful staff. I ordered for my class and they were
-                great.”<br><span>Chandy</span></div>
-            <div class="feedback">“Author events are so inspiring. Keep them coming!”<br><span>Seyla</span></div>
-            <div class="feedback">“Fast delivery and loved the Khmer collections — highly
-                recommended!”<br><span>Visa</span></div>
-            <div class="feedback">“Great prices and helpful staff. I ordered for my class and they were
-                great.”<br><span>Chandy</span></div>
+                great.”<br><span>Molika</span></div>
             <div class="feedback">“Author events are so inspiring. Keep them coming!”<br><span>Seyla</span></div>
         </div>
-        </div>
+        </div>;
     </section>
 
 
@@ -127,29 +128,32 @@
         <h2>Our Partnerships</h2>
         <div class="partners-container">
             <div class="partner-card">
+                <img class="partner-img" src="../image/partner/aceleda.png" alt="">
                 <h3>ACELEDA BANK</h3>
                 <p>
-                    We collaborate with publishers and independent authors to bring you
-                    exclusive editions, early releases, and special events like book launches
-                    and author meet-ups.
+                    ACLEDA Bank Plc. is one of Cambodia’s largest and most trusted banks.
+                    Founded in 1993 as a microfinance organization, it has grown into a leading
+                    commercial bank with branches nationwide and operations in Laos and Myanmar.
                 </p>
             </div>
 
             <div class="partner-card">
-                <h3>ABA BANK</h3>
-                <p>
-                    Partnering with schools and learning centers allows us to support students
-                    and teachers with affordable access to textbooks, curated collections,
-                    and engaging reading programs.
-                </p>
-            </div>
-
-            <div class="partner-card">
+                <img class="partner-img" src="../image/partner/vet.png" alt="">
                 <h3>VIREAK BUN THAM</h3>
                 <p>
-                    Together with cafés and cultural hubs, we create cozy book corners,
-                    host “Read & Relax” events, and offer cross-promotions that connect
-                    books with lifestyle.
+                    Vireak Buntham Express, founded in 2004, is a leading Cambodian transport company offering
+                    affordable intercity and cross-border bus services, including express and overnight routes
+                    with options for added comfort.
+                </p>
+            </div>
+
+            <div class="partner-card">
+                <img class="partner-img" src="../image/partner/aba.png" alt="">
+                <h3>ABA BANK</h3>
+                <p>
+                    ABA Bank (Advanced Bank of Asia Limited), founded in 1996 and owned by National Bank of Canada,
+                    is Cambodia’s largest commercial bank. It offers digital banking, loans, cards, remittances,
+                    and wide branch and self-banking networks.
                 </p>
             </div>
         </div>
@@ -170,10 +174,10 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="category.html">Category</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -181,9 +185,10 @@
             <div class="footer-categories">
                 <h3>Categories</h3>
                 <ul>
-                    <li><a href="#">Novels</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Comics</a></li>
+                    <li><a href="category.html">Novels</a></li>
+                    <li><a href="social.html">Social</a></li>
+                    <li><a href="comics.html">Comics</a></li>
+                    <li><a href="learning.html">Education</a></li>
                 </ul>
             </div>
 
