--- a/pages/comics.html
+++ b/pages/comics.html
@@ -197,10 +197,10 @@
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="category.html">Category</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -208,9 +208,10 @@
             <div class="footer-categories">
                 <h3>Categories</h3>
                 <ul>
-                    <li><a href="#">Novels</a></li>
-                    <li><a href="#">Education</a></li>
-                    <li><a href="#">Comics</a></li>
+                    <li><a href="category.html">Novels</a></li>
+                    <li><a href="social.html">Social</a></li>
+                    <li><a href="comics.html">Comics</a></li>
+                    <li><a href="learning.html">Education</a></li>
                 </ul>
             </div>
 
